# kedro-mermaid

./: .gitignore  .readthedocs.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: examples.md  getting-started.md  index.md
docs/how-to/: customise-the-diagram.md  filter-the-diagram.md
docs/reference/: architecture.md  cli.md
src/kedro_mermaid/: __init__.py  contants.py  plugin.py
src/kedro_mermaid/cli/: generate.py
src/kedro_mermaid/lib/: diagram_output.py  graph.py  parsed_name.py  utils.py
