[project]
name = "kedro-mermaid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "kedro>=0.19.8",
    "regex>=2025.9.18",
]

[project.scripts]
kedro-mermaid = "kedro_mermaid.__main__:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-shadcn>=0.9.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."kedro.project_commands"]
mermaid = "kedro_mermaid:commands"

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
preview = true
extend-select = ["S", "I", "FBT", "A", "COM", "DTZ", "ISC", "LOG", "G", "PIE", "T20", "PT", "RET", "SIM", "TID", "PTH", "UP", "DOC"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"src".msg = "Do not use src imports. Imports are relative to the src directory and should not include the 'src.' prefix."

[tool.ruff.format]
docstring-code-format = true
